fix popup added on mobile

--- a/scss/media.sass
+++ b/scss/media.sass
@@ -435,6 +435,9 @@
   .header-section
     padding: 14px 0
 
+  .popup
+    background: rgba(0, 0, 0, 0.9)
+
 
 @media screen and (max-width: 991px)
   .header-logo
